--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -5,6 +5,7 @@ $padding: rem-calc(20);
 :host{
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   padding: $padding 0;
 
@@ -15,9 +16,13 @@ $padding: rem-calc(20);
 
     width: calc(49% - 2.5rem);
     height: rem-calc(157 - 40);
+    margin-bottom: rem-calc(10);
     padding: $padding;
 
     border-radius: rem-calc(10);
+
+    text-decoration: none;
+    color: var(--primary-color);
 
     &__status{
       h2{
@@ -64,7 +69,7 @@ $padding: rem-calc(20);
       background: url('../../../assets/bg/background-list-pokemons.svg') no-repeat;
 
       img{
-        width: rem-calc(80);
+        width: rem-calc(60);
       }
     }
   }
